# RubiksCube3D

./: .LICENSE  .gitignore  CMakeLists.txt  README.md  dump_cpp.sh
.github/workflows/: c-cpp.yml  ci.yml
include/core/: Camera.h  Color.h  Rotation.h  RubiksCube.h
include/graphics/: OpenGLHeaders.h  Renderer.h
include/input/: InputHandler.h
src/: main.cpp
src/core/: Camera.cpp  Color.cpp  Rotation.cpp  RubiksCube.cpp
src/graphics/: Renderer.cpp
src/input/: InputHandler.cpp
